<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>ColormapSelection</class>
 <widget class="QWidget" name="ColormapSelection">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>159</width>
    <height>25</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Form</string>
  </property>
  <layout class="QHBoxLayout" name="horizontalLayout">
   <property name="leftMargin">
    <number>0</number>
   </property>
   <property name="topMargin">
    <number>0</number>
   </property>
   <property name="rightMargin">
    <number>0</number>
   </property>
   <property name="bottomMargin">
    <number>0</number>
   </property>
   <item>
    <widget class="QLabel" name="label">
     <property name="text">
      <string>Colormap</string>
     </property>
    </widget>
   </item>
   <item>
    <widget class="QComboBox" name="colormapComboBox"/>
   </item>
  </layout>
 </widget>
 <resources/>
 <connections/>
</ui>
